--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.482.0",
     "motion": "^12.5.0",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
